# Nusantara-Language

./: CHANGELOG.md  CMakeLists.txt  README.md  antlr4_gen  pubspec.yaml  test.dart  test.txt
concept/: CLI.md  (+2 more)
ncpp/: CMakeLists.txt  CMakePresets.json  README.md
ncpp/examples/: CMakeLists.txt
ncpp/examples/src/: main.cc
ncpp/include/ncpp/: batas_jumlah.h  ncpp.h  struktur_data.h
ncpp/include/ncpp/alat/: alat.h  alat_mpfr.h  alat_string.h  string.h
ncpp/include/ncpp/konsol/: konsol.h
ncpp/include/ncpp/nilai/: nilai_bilangan.h
ncpp/include/ncpp/tipe_data/: atau.h  benarsalah.h  dinamis.h  kumpulan.h  teks.h
ncpp/scripts/: lin-build.sh  test.sh  win-build.sh
ncpp/src/ncpp/: batas_jumlah.cc  ncpp.cc
ncpp/src/ncpp/alat/: alat.cc  alat_mpfr.cc  alat_string.cc  mpfr.cc  string.cc
ncpp/src/ncpp/tipe_data/: benarsalah.cc  dinamis.cc  teks.cc
ncpp/temp/: daftar.h  daftar_test.cc  kumpulan_old.h  kumpulan_old_test.cc  peta.h
ncpp/test/: CMakeLists.txt
ncpp/test/src/ncpp_test/: _bilangan_bulat_test.cc  _bilangan_desimal_test.cc  alat_mpfr_test.cc  alat_string_test.cc  atau_test.cc  benarsalah_test.cc  bilangan_bulat_test.cc  bilangan_desimal_test.cc  bilangan_test.cc  dinamis_test.cc  konsol_test.cc  kumpulan_test.cc  mpfr_test.cc  peta_test.cc  string_test.cc  teks_test.cc
sdk/nusantara/: .clang-format  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  build.bat  build.sh  compile_commands.json  debug.gdb  todo.txt
sdk/nusantara/examples/: halo_dunia.nl  tes.nl
sdk/nusantara/include/: error_info.h  lexer.h  n_bulat.h  n_desimal_pr.h  n_desimal_pt.h  n_kalimat.h  n_karakter.h  n_konsol.h  parser.h  parser_rule.h  parser_tree.h  token.h  token_type.h  token_type_data.h  utils.h  visitor.h
sdk/nusantara/include/cli/: cli.h
sdk/nusantara/include/config/: config.h
sdk/nusantara/include/core/: any.h  core.h  error.h  format.h  pointer.h  print.h  string.h
sdk/nusantara/include/error/: error_info.h
sdk/nusantara/include/interpreter/: interpreter.h  variable.h  variable_manager.h
sdk/nusantara/include/lexer/: lexer.h  token.h  token_type.h  token_type_data.h
sdk/nusantara/scripts/: clang-format-all.sh  format.sh  ter-build-d.sh  ter-build-r.sh  win-build-d.sh  win-build-r.sh
sdk/nusantara/src/: error_info.cc  lexer.cc  main.cc  n_bulat.cc  n_desimal_pr.cc  n_desimal_pt.cc  n_kalimat.cc  n_karakter.cc  n_konsol.cc  parser.cc  parser_tree.cc  token.cc  token_type_data.cc  utils.cc
(+297 files in other folders)
